# ProjectOort

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  README.md
assets/: laser2.mtl
game/: Cargo.toml
game/assets/BlackMarble/: floor.mtl  pbrFloor-pbr.yml
game/assets/Ships/: StarSparrow01.mtl  StarSparrow02.mtl
game/assets/asteroid1/: Asteroid.mtl  Enemy_Asteroid.DAE  Enemy_Asteroid.mtl
game/assets/fonts/: SignedDistanceArial.fnt
game/assets/planet/: Material.001-pbr.yml
game/src/: controls.rs  game.rs  game_map.rs  game_mediator.rs  main.rs  minimap.rs  object.rs  player.rs
game/src/cg_support/: mod.rs  node.rs  ssbo.rs  transformation.rs
game/src/collisions/: bvh.rs  collision_mesh.rs  highp_col.rs  mod.rs  obb.rs  object.rs  octree.rs
game/src/controls/: ai.rs  mod.rs  pathfinding.rs  user_input.rs
game/src/graphics_engine/: billboard.rs  camera.rs  cubes.rs  drawable.rs  entity.rs  instancing.rs  map.rs  mod.rs  primitives.rs  scene.rs  shader.rs  text.rs  textures.rs  window.rs
game/src/graphics_engine/model/: animation.rs  material.rs  mesh.rs  mod.rs  model.rs
game/src/graphics_engine/particles/: mod.rs  particle.rs  system.rs
game/src/graphics_engine/pipeline/: mod.rs  render_pass.rs  render_target.rs  texture_processor.rs
game/src/graphics_engine/shaders/: billboard.fs  cloud.fs  eqRect.fs  hdr.vs  icon.vs  line.vs  parallelLaser.gs  parallelPbr.gs  sky.fs  text.fs  triTriCollision.comp
game/src/physics/: forces.rs  mod.rs  rigid_body.rs  simulation.rs
server/: Cargo.toml
server/src/: argument_parser.rs  main.rs  test.rs
(+166 files in other folders)
