[package]
name = "oort-client"
version = "0.1.0"
authors = ["Stephen Verderame <stephenverderame@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.28.0"
#glium = "0.31.0"
glium = { path = "../../GliumFork" }
cgmath = "0.18.0"
tobj = "3.2.0"
image = "0.23.14"
gl = "0.14.0"
rand = "0.8.5"
assimp = "0.3.1"
assimp-sys = "0.3.1"
arr_macro = "0.1.3"
itertools = "0.10.3"
noise = "0.7.0"
regex = "1.6.0"
shared_types = { path = "../shared_types" }

[dev-dependencies]
assertables = "5.2.0"
assert_approx_eq = "1.1.0"
once_cell = "1.13.0"
serial_test = "0.8.0"