[package]
name = "oort-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_types = { path = "../shared_types" }
static_assertions = "1.1.0"

[dev-dependencies]
serial_test = "0.8.0"
cgmath = "0.18.0"
